--- a/report/Dissertation-LR.tex
+++ b/report/Dissertation-LR.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Literature Review}
 
 	\subsection{Search Strategy}
@@ -96,9 +97,12 @@ This basic form of neural network is also called a feed forward neural network (
 	This method of intrusion detection through the use of the negative selection algorithm has been implemented in a number of papers to great effect. \cite{powers2008hybrid} shows that the negative selection algorithm evolved using a genetic algorithm can acheive detection rates of up to 98\%. \cite{dasgupta2002immunity} found similar results similarly using a genetic algorithm with a self detection rate of 96\% and a non-self detection rate of up to 86\%. This demonstrates that negative selection is an effective and viable method of network intrusion detection.
 	
 \subsection{Support Vector Machine}
-TODO
 
-	\subsection{Research Contribution} \label{Research Contribution}
+Support Vector Machines (SVM) are a machine learning classification method first proposed in a paper by \cite{cortes1995support}. SVM's operate by implementing the following idea: "input vectors are non-linearly mapped to a very high dimension feature space. In this feature space a linear decision surface is constructed.". Boundaries may then be constructed around each class of points, and when a new input is mapped to this descision surface it's type may be determined based on what boundaries it falls within.
+
+Support Vector Machines have been applied to network intrusion detection numerous times, all of which show very promising results. In a paper by \cite{mukkamala2002intrusion}, it was found that SVM's could be used to acheive a classification accuracy of 99.50\%, even greater than that of a neural network which was tested giving an accuracy of 99.25\%. Another paper by \cite{kim2003network} found similar success using support vector machines, with accuracy comparible to the winner of the KDD99 Cup competition, again displaying the methods suitability for network intrusion detection. Finally a paper by \cite{bhavsar2013intrusion} acheived the same success using SVM's, getting an accuracy 98.6\%.
+
+\subsection{Research Contribution} \label{Research Contribution}
 	
 During this dissertation the there are a number of goals which are aimed to be met and questions answered in order to ultimatley contribute to the research of network intrusion detection is some way. The main question which is to be answered is what is the difference in performance between a single stage classifier and a two stage classifier in the context of network intrusion detection, and to determine what the configuration of machine learning classifiers discussed within this project produces the highest accuracy network intrusion detection and classification of intrusive network connections, where accuracy is defined as a high number of true positives and a low number of false positives.
 	
@@ -106,12 +110,14 @@ During this dissertation the there are a number of goals which are aimed to be m
 	
 	The project will achieve that goal in the following manner: A number of machine learning algorithms will be chosen to be implemented, i.e. k-nearest neighbors, artificial neural networks, and negative selection. These algorithms will be housed by a peice of software which will be written to run them, obtain metrics and display information on the performance of each algorithm, in the form of tables and graphs, etc. Once this information has been extracted from each algorithm, an analysis and evauluation will be performed on the accuracy of each method, and a conclusion drawn.
 		
-	\subsection{Dataset}
-	TODO: Change to NSLKDD and UNSWNB15
-
-	The dataset which was to perform the evaluation of the network intrusion detection methods is the KDD Cup 1999 dataset. This dataset comes from the Third International Knowledge Discovery and Data Mining Tools Competition and is based on data captured in the DARPA'98 IDS evaluation program \cite{Lippmann2000darpa}, \cite{tavallaee2009detailed}. 
+	\subsection{Datasets}
+	The datasets which have been chosen to perform the evaluation of the network intrusion detection methods are the NSL-KDD Dataset and the UNSW-NB15 dataset. The first dataset, NSL-KDD, is a corrected version of the original KDD 99 Cup dataset which comes from the Third International Knowledge Discovery and Data Mining Tools Competition and is based on data captured in the DARPA'98 IDS evaluation program \cite{Lippmann2000darpa}, \cite{tavallaee2009detailed}. 
 	
-	This dataset has been widely criticized by researchers and experts due to several factors such as; having a large number of redundant records \textit{"which  cause  the  learning  algorithm  to  be  biased  towards  the  most  frequent  records,  thus  prevent  it  from  recognizing  rare  attack  records"} \cite{panda2012hybrid} , and in \cite{vasudevan2011ssenet}, for being outdated meaning that it does not account for new developments in network attacks. This is not of concern during this project as the dataset is used purely as a proof of concept and will not be deployed into an actual network intrusion detection role. There are other datasets which have been proposed for use such as the NSL-KDD which is a revised version of the KDD99 dataset which has been shown to have eliminated many of the faults of the KDD99 dataset while also achieving better performance in the training of network intrusion detection systems \cite{dhanabal2015study}. While all of the criticisms against the KDD Cup 1999 dataset are well founded and a legitimate cause for concern it has been chosen as it is the single most used dataset and researched dataset in the entire network intrusion detection field. With this large amount of research having been performed on this dataset the results from such studies can be used as confirmation that the algorithms which are to be implemented are performing correctly, and also can be used to make an accurate comparisons of results. The KDD Cup 99 dataset also has a version released which has all redundant entries removed while maintaining the correct ratio of non-intrusive entries to attacks, allowing for much faster training of algorithms and collection of data, which is a priority as there is a time constraint which must be followed during this project.
+	The original KDD 99 Cup dataset has been widely criticized by researchers and experts due to several factors such as; having a large number of redundant records \textit{"which  cause  the  learning  algorithm  to  be  biased  towards  the  most  frequent  records,  thus  prevent  it  from  recognizing  rare  attack  records"} \cite{panda2012hybrid} , and in \cite{vasudevan2011ssenet}, for being outdated meaning that it does not account for new developments in network attacks. The NSL-KDD dataset is a revised version of the KDD99 dataset which has been shown to have eliminated many of the faults of the original dataset while also acheiving better performance in the training of network intrusion detection systems \cite{dhanabal2015study}, primarily through the removal of a large amount of redundant and duplicated records, while maintaining the correct ratio of non-intrusive entries to attacks, allowing for much faster training of algorithms and collection of data which is a priority as there is a time constraint which must be followed during this project.
+	
+	The second dataset, UNSW-NB15, is a new dataset form the University of New South Wales which aims to rectify problems present in both the KDD99 and NSL-KDD dataset. While the NSL-KDD dataset corrects many problems of the KD99 dataset regarding redundant records, it "is not a comprehensive representation of a modern low foot print attack environment." \cite{moustafa2015unsw}. All of the features of this dataset have also been shown to be highly relevant, all of which contribute to aspects of a low footprint complex attack \cite{moustafa2016evaluation}. 
+
+	Performing an evaluation on two datasets allows for the comparison of results between the two datasets to see if trends present in one are found in the other. This is important to confirm that the results found are significant and not simply due to chance, or some quirk of the dataset used.
 	
 	\subsection{Literature Conclusion}
 	The research field of Network Intrusion Detection is one of upmost important due to the widespread prevelance of network security breaches and attacks. There have been a large number of studies performed in this area, with each resulting in varying levels of success. The algorithms chosen for this investigation have been proven to be effective at detecting network intrusions, and studies have also shown that through the use of hybrid network intrusion detection systems which make use of multiple classification stages and methods an increase in accurate classification rate. However, machine learning techniques have not yet proven accurate enough in their classification and detection rates to be deployed in a commercial setting, without substantial supervision. There is also a distinct lack within the research in making direct comparisons between different configurations of multiple stage classifiers, and also in making direct comparisons to their single stage counterparts. As a result of this, the conclusion has been reached that conducting an investigation into this area may prove beneficial for future studies, and may provide an insight into what configurations of multiple stage classifiers are effective in the context of network intrusion detection.
