--- a/report/plots/f1score.tex
+++ b/report/plots/f1score.tex
@@ -38,6 +38,6 @@
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
-\caption{Classifiers f1-Score Graph}
+\caption{NSL-KDD Classifiers f1-Score Graph}
 \label{nslf1score}
 \end{figure}
