--- a/report/plots/precision.tex
+++ b/report/plots/precision.tex
@@ -39,6 +39,6 @@
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
-\caption{Classifiers Precision Graph}
+\caption{NSL-KDD Classifiers Precision Graph}
 \label{nslprecision}
 \end{figure}
