--- a/report/Dissertation-Dec.tex
+++ b/report/Dissertation-Dec.tex
@@ -19,16 +19,18 @@ I also confirm that I have obtained informed consent from all people I have invo
 
 \begin{flushleft} \large
 \emph{Signed:} \\
+\includegraphics[trim={0 .75cm 0 .95cm},clip, width=0.4\textwidth, center]{figures/signature}
 \end{flushleft}
 
-\vspace{.5cm}
 
 \begin{flushleft} \large
 \emph{Date:} \\
+\today
 \end{flushleft}
 
 \vspace{.5cm}
 
 \begin{flushleft} \large
 \emph{Matriculation no: }  \\
+40208539
 \end{flushleft}
