--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -663,3 +663,63 @@ month={July}
   journal={arXiv preprint arXiv:1412.6980},
   year={2014}
 }
+
+@article{hall2009weka,
+  title={The WEKA data mining software: an update},
+  author={Hall, Mark and Frank, Eibe and Holmes, Geoffrey and Pfahringer, Bernhard and Reutemann, Peter and Witten, Ian H},
+  journal={ACM SIGKDD explorations newsletter},
+  volume={11},
+  number={1},
+  pages={10--18},
+  year={2009},
+  publisher={ACM}
+}
+
+@online{splunk,
+  author={{Splunk Inc}},
+  title={SIEM, AIOPS, APPLICATION MANAGEMENT, LOG MANAGEMENT, MACHINE LEARNING, AND COMPLIANCE | SPLUNK},
+  url={http://www.splunk.com/},
+  urldate={2018-03-29},
+  journal={Splunk.com}, 
+  year={2018}
+}
+
+@article{cortes1995support,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+
+@inproceedings{mukkamala2002intrusion,
+  title={Intrusion detection using neural networks and support vector machines},
+  author={Mukkamala, Srinivas and Janoski, Guadalupe and Sung, Andrew},
+  booktitle={Neural Networks, 2002. IJCNN'02. Proceedings of the 2002 International Joint Conference on},
+  volume={2},
+  pages={1702--1707},
+  year={2002},
+  organization={IEEE}
+}
+
+@inproceedings{kim2003network,
+  title={Network-based intrusion detection with support vector machines},
+  author={Kim, Dong Seong and Park, Jong Sou},
+  booktitle={International Conference on Information Networking},
+  pages={747--756},
+  year={2003},
+  organization={Springer}
+}
+
+@article{bhavsar2013intrusion,
+  title={Intrusion detection system using data mining technique: Support vector machine},
+  author={Bhavsar, Yogita B and Waghmare, Kalyani C},
+  journal={International Journal of Emerging Technology and Advanced Engineering},
+  volume={3},
+  number={3},
+  pages={581--586},
+  year={2013}
+}
