--- a/report/plots/precisionUNSW.tex
+++ b/report/plots/precisionUNSW.tex
@@ -74,6 +74,6 @@
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
-\caption{Classifiers Precision Graph}
+\caption{UNSW-NB15 Classifiers Precision Graph}
 \label{unswprecision}
 \end{figure}
