--- a/report/plots/recall.tex
+++ b/report/plots/recall.tex
@@ -38,6 +38,6 @@
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
-\caption{Classifiers Recall Graph}
+\caption{NSL-KDD Classifiers Recall Graph}
 \label{nslrecall}
 \end{figure}
